<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_header"
        layout="@layout/include_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/include_list"
        layout="@layout/include_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <include
        android:id="@+id/include_empty"
        layout="@layout/include_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:minHeight="56dp"
        android:text="@string/favorites_title"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:backgroundTint="@drawable/fab_selector"
        app:collapsedSize="56dp"
        app:icon="@drawable/ic_twotone_favorite_unselected"
        app:iconTint="#fff"
        app:shapeAppearanceOverlay="@style/ExtendedFabStyle" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
