<resources>
    <!--App-->
    <string name="app_name">PicPay</string>

    <!-- Accessibility -->
    <string name="desc_favorite">Favorite button</string>
    <string name="desc_favorites">Favorites button</string>
    <string name="desc_empty_list">Airplane image</string>
    <string name="desc_arrow_back">Arrow back</string>

    <!--Main-->
    <string name="main_title">Contacts</string>
    <string name="retry">Retry</string>
    <string name="generic_error">Oops! Something went wrong.</string>
    <string name="pagination_error">Unable to load data.</string>
    <string name="ok">OK</string>
    <string name="night_mode">night mode</string>
    <string name="day_mode">day mode</string>

    <!--Favorites-->
    <string name="favorites_title">Favorites</string>
    <string name="favorites_empty_list">The favorites list is empty.</string>

    <!--Details-->
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="share_title">Share contact</string>
    <string name="share_extra">"""Hi, I would like to share this contact.
        |
        |Username: \@%1$s
        |Name: %2$s"""
    </string>

    <!--Adapter main-->
    <string name="username">\@%s</string>
    <string name="main_empty_list">The list is empty.</string>
    <string name="loading_list">Loading list…</string>
    <string name="error_loading">Error loading</string>
    <string name="check_connection">Check your connection.</string>

</resources>
