...
        app:layout_constraintBottom_toBottomOf="@+id/image_user"
        app:layout_constraintStart_toStartOf="@+id/text_username"
        app:layout_constraintTop_toBottomOf="@+id/text_username"
        tools:text="Name Surname" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/favorite_selector"
        app:layout_constraintBottom_toBottomOf="@+id/image_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_user"
...
