<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header_layout"
    android:background="@color/color_header"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="84dp"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageButton
            android:id="@+id/button_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_arrow_back"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            style="@style/ScreenTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/main_title"
            android:textColor="@color/contact_title"
            app:layout_constraintBottom_toBottomOf="@+id/button_arrow"
            app:layout_constraintStart_toEndOf="@+id/button_arrow"
            app:layout_constraintTop_toTopOf="@+id/button_arrow" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title">

            <RadioButton
                android:id="@+id/radio_day_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:button="@null"
                android:checked="true"
                android:drawableStart="@drawable/day_mode_selector"
                android:drawablePadding="3dp"
                android:text="@string/day_mode" />

            <RadioButton
                android:id="@+id/radio_night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@drawable/night_mode_selector"
                android:drawablePadding="3dp"
                android:text="@string/night_mode" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.AppBarLayout>
